[package]
name = "av-foundation"
description = "Bindings to AVFoundation framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/av-foundation"
version = "0.6.0"
authors.workspace = true
license.workspace = true
categories = ["multimedia::video", "os::macos-apis"]
keywords = ["avfoundation", "camera", "capture"]
edition.workspace = true

[dependencies]
block2 = "0.5"
core-foundation = { version = "0.10", default-features = false }
core-media = { version = "0.6", path = "../core-media", default-features = false, features = ["objc"] }
core-graphics2 = { version = "0.5", path = "../core-graphics", default-features = false, features = ["objc"] }
core-video = { version = "0.5", path = "../core-video", default-features = false, features = ["objc"] }
dispatch2 = "0.1"
libc = "0.2"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSDictionary", "NSEnumerator", "NSError", "NSRange", "NSString", "NSValue"] }

[dev-dependencies]
os-ver = "0.2"

[features]
default = ["capture", "link"]
audio = []
capture = []
editing = []
link = ["core-foundation/link", "core-media/link", "core-video/link"]
playback = []

[[example]]
name = "video_capture"

[package.metadata.docs.rs]
no-default-features = true
features = ["capture"]
default-target = "x86_64-apple-darwin"
targets = [
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
]
