[package]
name = "av-foundation"
description = "Bindings to AVFoundation framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/av-foundation"
version = "0.6.1"
authors.workspace = true
license.workspace = true
categories = ["multimedia::video", "os::macos-apis"]
keywords = ["avfoundation", "camera", "capture"]
edition.workspace = true

[dependencies]
block2 = "0.5"
core-foundation.workspace = true
core-graphics2 = { workspace = true, features = ["objc"] }
core-media = { workspace = true, features = ["objc"] }
core-video = { workspace = true, features = ["objc"] }
dispatch2 = "0.1"
libc.workspace = true
objc2.workspace = true
objc2-foundation = { version = "0.2", features = ["NSArray", "NSDictionary", "NSEnumerator", "NSError", "NSRange", "NSString", "NSValue"] }

[dev-dependencies]
os-ver = "0.2"

[features]
default = ["capture", "link"]
audio = []
capture = []
editing = []
link = ["core-foundation/link", "core-media/link", "core-video/link"]
playback = []

[[example]]
name = "video_capture"

[package.metadata.docs.rs]
no-default-features = true
features = ["capture"]
default-target = "x86_64-apple-darwin"
targets = [
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
]
