[package]
name = "core-audio-types"
description = "Bindings to CoreAudioTypes framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/core-audio-types"
version = "0.2.0"
authors.workspace = true
license.workspace = true
categories = ["multimedia::audio", "os::macos-apis"]
keywords = ["coreaudio"]
edition.workspace = true

[dependencies]
cfg-if = "1.0"
core-foundation-sys = { version = "0.8", default-features = false }
libc = "0.2"

[features]
default = ["link"]
link = ["core-foundation-sys/link"]
prefer-fixed-point = []

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-apple-darwin"
targets = [
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
