[package]
name = "core-audio"
description = "Safe bindings to CoreAudio framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/core-audio"
version = "0.1.0"
authors.workspace = true
license.workspace = true
categories = ["multimedia::audio", "os::macos-apis"]
keywords = ["coreaudio"]
edition.workspace = true

[dependencies]
core-audio-types.workspace = true
core-foundation.workspace = true
libc.workspace = true
objc2-core-audio = { version = "0.3.2", default-features = false, features = ["AudioHardware", "HostTime", "objc2-core-audio-types", "libc"] }

[features]
default = ["std"]
std = ["objc2-core-audio/std"]

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-apple-darwin"
targets = [
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
