[package]
name = "core-graphics2"
description = "Safe bindings to CoreGraphics framework, including display stream"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/core-graphics2"
version = "0.5.0"
authors.workspace = true
license.workspace = true
categories = ["graphics", "multimedia", "os::macos-apis"]
keywords = ["coregraphics", "display", "displaystream", "screencapture"]
edition.workspace = true

[dependencies]
bitflags = "2.5"
block = "0.1"
cfg-if = "1.0"
core-foundation = { version = "0.10", default-features = false }
dispatch2 = { version = "0.1", optional = true }
io-surface = { version = "0.16", optional = true }
libc = "0.2"
metal = { version = "0.33", optional = true }
objc2 = { version = "0.5", optional = true }

[dev-dependencies]
core-video = { path = "../core-video" }

[features]
default = ["display", "display-stream", "event", "link", "window"]
display = []
display-stream = ["dep:dispatch2", "dep:io-surface", "display", "objc"]
event = []
link = ["core-foundation/link"]
objc = ["dep:objc2"]
window = []

[[example]]
name = "display_stream"

[package.metadata.docs.rs]
no-default-features = true
features = ["display", "display-stream", "event", "objc", "window"]
default-target = "x86_64-apple-darwin"
targets = [
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
