[package]
name = "core-media"
description = "Safe bindings to CoreMedia framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/core-media"
version = "0.6.0"
authors.workspace = true
license.workspace = true
categories = ["multimedia", "os::macos-apis"]
keywords = ["coremedia"]
edition.workspace = true

[dependencies]
block = "0.1"
cfg-if = "1.0"
core-audio-types = { version = "0.2", path = "../core-audio-types", default-features = false}
core-foundation = { version = "0.10", default-features = false }
core-graphics2 = { version = "0.5", path = "../core-graphics", default-features = false }
core-video = { version = "0.5", path = "../core-video", default-features = false }
libc = "0.2"
objc2 = { version = "0.5", optional = true }

[features]
default = ["link"]
link = ["core-foundation/link", "core-graphics2/link", "core-video/link"]
objc = ["dep:objc2"]

[package.metadata.docs.rs]
no-default-features = true
features = ["objc"]
default-target = "x86_64-apple-darwin"
targets = [
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
