[package]
name = "core-media"
description = "Safe bindings to CoreMedia framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/core-media"
version = "0.6.2"
authors.workspace = true
license.workspace = true
categories = ["multimedia", "os::macos-apis"]
keywords = ["coremedia"]
edition.workspace = true

[dependencies]
block = "0.1"
cfg-if.workspace = true
core-audio-types.workspace = true
core-foundation.workspace = true
core-graphics2.workspace = true
core-video.workspace = true
libc.workspace = true
objc2 = { workspace = true, optional = true }

[features]
default = ["link"]
link = ["core-foundation/link", "core-graphics2/link", "core-video/link"]
objc = ["dep:objc2", "core-graphics2/objc", "core-video/objc"]

[package.metadata.docs.rs]
no-default-features = true
features = ["objc"]
default-target = "x86_64-apple-darwin"
targets = [
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
