[package]
name = "screen-capture-kit"
description = "Bindings to ScreenCaptureKit framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/screen-capture-kit"
version = "0.5.0"
authors.workspace = true
license.workspace = true
categories = ["multimedia", "os::macos-apis"]
keywords = ["screencapturekit", "screencapture"]
edition.workspace = true

[dependencies]
block2 = "0.5"
core-foundation = { version = "0.10", default-features = false }
core-graphics2 = { version = "0.5", path = "../core-graphics", default-features = false, features = ["display", "objc", "window"]}
core-media = { version = "0.6", path = "../core-media", default-features = false, features = ["objc"] }
dispatch2 = "0.1"
libc = "0.2"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSDictionary", "NSError", "NSGeometry", "NSString"] }

[dev-dependencies]
core-audio-types = { version = "0.2", path = "../core-audio-types" }
core-video = { version = "0.5", path = "../core-video", features = ["objc"] }

[features]
default = ["link"]
link = ["core-foundation/link", "core-graphics2/link", "core-media/link"]

[[example]]
name = "screen_capture"

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-apple-darwin"
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
