[package]
name = "screen-capture-kit"
description = "Bindings to ScreenCaptureKit framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/screen-capture-kit"
version = "0.7.0"
authors.workspace = true
license.workspace = true
categories = ["multimedia", "os::macos-apis"]
keywords = ["screencapturekit", "screencapture"]
edition.workspace = true

[dependencies]
block2 = "0.6"
core-foundation.workspace = true
core-graphics2 = { workspace = true, features = ["display", "objc", "window"]}
core-media = { workspace = true, features = ["objc"] }
dispatch2.workspace = true
libc.workspace = true
objc2.workspace = true
objc2-foundation = { version = "0.3", features = ["NSArray", "NSDictionary", "NSError", "NSGeometry", "NSString"] }

[features]
default = ["link"]
link = ["core-foundation/link", "core-graphics2/link", "core-media/link"]

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-apple-darwin"
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
