[package]
name = "video-toolbox"
version = "0.1.1"
edition = "2018"
authors = ["Billy Lindeman <billylindeman@gmail.com>", "luozijun <luozijun.assistant@gmail.com>"]
description = "Bindings to VideoToolBox for OS X and iOS"
license = "MIT"


[dependencies]
libc = "0.2"
core-foundation = "0.9"
core-media = { path = "../core-media" }
core-video = { path = "../core-video" } 

[dev-dependencies]
core-foundation = "0.9"

