[package]
name = "video-toolbox"
description = "Safe bindings to VideoToolbox framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/video-toolbox"
version = "0.1.2"
authors.workspace = true
license.workspace = true
categories = ["multimedia", "multimedia::video", "os::macos-apis"]
keywords = ["videotoolbox", "decoder", "encoder"]
edition.workspace = true

[dependencies]
bitflags.workspace = true
block = "0.1"
core-foundation.workspace = true
core-graphics2.workspace = true
core-media.workspace = true
core-video.workspace = true
libc = "0.2"

[features]
default = ["link"]
link = ["core-foundation/link", "core-graphics2/link", "core-media/link", "core-video/link"]

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-apple-darwin"
targets = [
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
]
